--- a/Shootings.ipynb
+++ b/Shootings.ipynb
@@ -368,90 +368,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4895 entries, 0 to 4894\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   id                       4895 non-null   int64  \n",
+      " 1   name                     4895 non-null   object \n",
+      " 2   date                     4895 non-null   object \n",
+      " 3   manner_of_death          4895 non-null   object \n",
+      " 4   armed                    4895 non-null   object \n",
+      " 5   age                      4895 non-null   float64\n",
+      " 6   gender                   4895 non-null   object \n",
+      " 7   race                     4895 non-null   object \n",
+      " 8   city                     4895 non-null   object \n",
+      " 9   state                    4895 non-null   object \n",
+      " 10  signs_of_mental_illness  4895 non-null   bool   \n",
+      " 11  threat_level             4895 non-null   object \n",
+      " 12  flee                     4895 non-null   object \n",
+      " 13  body_camera              4895 non-null   bool   \n",
+      " 14  arms_category            4895 non-null   object \n",
+      "dtypes: bool(2), float64(1), int64(1), object(11)\n",
+      "memory usage: 506.8+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "manner_of_death\n",
+       "shot                4647\n",
+       "shot and Tasered     248\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.value_counts(\"manner_of_death\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "armed\n",
+       "gun                   2755\n",
+       "knife                  708\n",
+       "unknown                418\n",
+       "unarmed                348\n",
+       "toy weapon             171\n",
+       "                      ... \n",
+       "contractor's level       1\n",
+       "pen                      1\n",
+       "chainsaw                 1\n",
+       "ice pick                 1\n",
+       "wrench                   1\n",
+       "Length: 89, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.value_counts(\"armed\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender\n",
+       "M    4673\n",
+       "F     222\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.value_counts(\"gender\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "race\n",
+       "White       2476\n",
+       "Black       1298\n",
+       "Hispanic     902\n",
+       "Asian         93\n",
+       "Native        78\n",
+       "Other         48\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.value_counts(\"race\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "signs_of_mental_illness\n",
+       "False    3792\n",
+       "True     1103\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.value_counts(\"signs_of_mental_illness\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "threat_level\n",
+       "attack          3160\n",
+       "other           1528\n",
+       "undetermined     207\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.value_counts(\"threat_level\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "flee\n",
+       "Not fleeing    3073\n",
+       "Car             820\n",
+       "Foot            642\n",
+       "Other           360\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.value_counts(\"flee\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "body_camera\n",
+       "False    4317\n",
+       "True      578\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.value_counts(\"body_camera\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "arms_category\n",
+       "Guns                     2764\n",
+       "Sharp objects             818\n",
+       "Unknown                   418\n",
+       "Unarmed                   348\n",
+       "Other unusual objects     192\n",
+       "Blunt instruments         122\n",
+       "Vehicles                  121\n",
+       "Multiple                   54\n",
+       "Piercing objects           29\n",
+       "Electrical devices         24\n",
+       "Explosives                  4\n",
+       "Hand tools                  1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.value_counts(\"arms_category\")"
    ]
